client/stylus/app.book.styl
@import "./client/Framework/themes/default/kdfn"
@import "./client/stylus/appfn"

#instruction-book
  abs()
  bottom                    15px
  margin-top                -222px
  left                      -1609px
  size                      1509px, 425px
  z-index                   1000
  rounded                   4px
  shadow                    inset 0 5px 5px rgba(0,0,0,.35), 0 15px 40px rgba(0,0,0,.8)
  background                transparent url("../images/book/book.jpg") no-repeat 0 0
  vendor                    transition, all .3s ease-in-out
  overflow                  visible
  &.more-terminal
      bottom                40px
  .cta_button
    font-size               13px
    color                   #FFFFFF
    line-height             18px
    text-shadow             0 1px 1px #2E1A00
    border-radius           4px
    gradient                #FFAB23 0%, #F27500 100%
    background              linear-gradient(#FFAB23 0%, #F27500 100%)
    font-weight             600
    text-decoration         none
    border                  1px solid #C1650F
    border-bottom-color     #8F4907
    margin                  0 5px
    shadow                  0 1px 3px 0 rgba(194,110,0,0.50)
    display                 inline-block
    padding                 0.5em 1em
    &.full_width
      display               block
      width                 100px
      text-align            center
      margin                1em auto
    &:hover
    &:focus
      gradient              #FFBF57 0%, #F27500 100%
      background            linear-gradient(#FFBF57 0%, #F27500 100%)
    &:active
      shadow                inset 0 1px 3px 0 rgba(0,0,0,.5)
      gradient              #F27500 0%, #FC7A00 100%
      background            linear-gradient(#F27500 0%, #FC7A00 100%)

  &.moveUp
    bottom                  145px
  &.in
    left                    -700px
  .contents
    overflow                auto
    height                  290px
    padding-right           0.7em
    li
      min-height            26px
  .controls
    abs()
    top                     33px
    right                   61px
    z-index                 999
    size                    685px, auto
    text-align              right
    .page-nav
      display               inline-block
      margin-left           15px
      a
        width               28px
        padding             0
        text-align          center
        &:first-child
          border-top-right-radius          0
          border-bottom-right-radius       0
          border-right                     0
        &:last-child
          border-top-left-radius           0
          border-bottom-left-radius        0
    a
      noTextDeco()
      font-size           11px
      color               #727272
      text-shadow         0 1px 0 #FFFFFF
      border-radius       4px
      background          linear-gradient(#FFFFFF 0%, #F0F0F0 100%)
      border              1px solid #D9D9D9
      shadow              0 1px 0 0 #FFFFFF
      height              26px
      line-height         26px
      display             inline-block
      padding             0 0.8em
      vendor              transition, color .1s linear
      font-weight         600
      &.dismiss-button
        position          absolute
        top               -45px
        right             -73px
        background        #111
        border-radius     50%
        border            3px solid white
        shadow            0 1px 3px 0 #000
        color             white
        width             20px
        height            20px
        line-height       20px
        padding           0
        text-align        center
        font-weight       bold
        font-size         0.7em
        &:hover
        &:focus
          color           white
          background      #555
      &:hover
      &:focus
        color             rgba(0,0,0,.8)

    .point
      position              relative
      display               block
      width                 25px
      height                32px
      bg                    image, url("../images/book/cursor_mac.png")
      bg                    position, bottom right
      bg                    repeat, no-repeat
      transition            left 2s, top 2s


  >div
    size                    735px, 408px
    vendor                  transition, opacity .3s ease-out
    &.left-page
      margin                6px 0 0 15px
    &.right-page
      margin                6px 0 0 0
    &.out
      opacity               0

section.page
  background            transparent no-repeat 0 0
  &.table-of-contents
    bg                  image, url("../images/book/01.png")
    bg                  position, 55px 90px
    .embedded
      margin            20px 30px 0 450px
      line-height       25px
      font-size         14px
      a
        color           linkColor1
        fl()
      span
        fr()

  &.a-story
    bg                  image, url("../images/book/02.png")
    bg                  position, center 74px
    >article
      text-align        center
      margin            250px 0 0 0
    &.no-header
      bg                position, center top
      >article
        margin          324px 0 0 0

    &.more-1
      bg                image, url("../images/book/03.png")
    &.more-2
      bg                image, url("../images/book/04.png")
    &.more-3
      bg                image, url("../images/book/05.png")
    &.more-4
      bg                image, url("../images/book/06.png")
    &.more-5
      bg                image, url("../images/book/07.png")
    &.more-6
      bg                image, url("../images/book/08.png")

  &.foreword
    bg                  image, url("../images/book/09.png")
    bg                  position, right bottom

  &.activity
    bg                  image, url("../images/book/10.png")
    bg                  position, center bottom
    p
      width             auto
    .embedded
      margin            15px 25px 0 43px
      size              auto, 77px
      bg                color, white
      border            1px solid rgb(229,229,229)
      shadow            inset 0 3px 1px 3px rgba(250,250,250,.5)
      gradient          rgb(255,255,255),rgb(242,242,242)
      rounded           2px
      span.button
        display         block
        abs()
        margin          23px 0 0 17px
        size            143px, 34px
        background      transparent url('../images/book/statusupdate.png') no-repeat 0 0
      input
        margin          23px 0 0 169px
        size            479px, 33px

  &.topics
    bg                  image, url("../images/book/11.png")
    bg                  position, left 174px

    p
      width             55%
      margin-left       45%
      padding           15px 20px 0 0

    .embedded
      abs()
      top               97px
      left              43px
      size              260px, 130px
      .ttag
        font-size       12px
        margin          0 6px 6px 0
        line-height     20px
        padding         0 7px
        max-width       150px
        rounded         4px
      .kdloader
        margin          40px 0 0 120px


  &.members
    bg                  image, url("../images/book/12.png")
    bg                  position, left bottom
    >article
      margin            20px 0 0 255px
      gradient          rgba(247, 247, 247, 0), rgba(247, 247, 247, .65)
      p
        width           auto
        padding-left    10px

  &.develop
    bg                  image, url("../images/book/13.png")
    bg                  position, left bottom
    >article
      margin            40px 0 0 360px
      font-size         13px
      p
        width           auto
    &.more-1
      bg                image, url("../images/book/14.png")
      bg                position, left center
      >article
        strong
          margin        14px 20px 0 40px
          display       block
          font-size     14px
          padding       3px 6px
          color         linkColor1
          background    #f2f2f2
          font-weight   400
          border        1px solid #eee
          word-break    break-all
          rounded       4px
    &.more-2
      bg                image, url("../images/book/15.png")
      bg                position, center center
      >article
        margin          130px 20px 0 120px
    &.more-3
      bg                image, url("../images/book/17.png")
      bg                position, center center
      >article
        margin          70px 60px 0 330px
      .embedded
        background      transparent url("../images/book/devbutton.png") no-repeat 0 0
        abs()
        bottom          35px
        right           105px
        size            250px, 120px
        .kdbuttonwithmenu-wrapper
          margin        99px 0 0 227px

  &.terminal
    bg                  image, url("../images/book/13a.png")
    bg                  position, left 80px
    >article
      margin            40px 20px 0 260px
      font-size         13px
      p
        width           auto
    &.more-1
      >article
        strong
          margin        14px 20px 0 40px
          display       block
          font-size     14px
          padding       3px 6px
          color         linkColor1
          background    #f2f2f2
          font-weight   400
          border        1px solid #eee
          word-break    break-all
          rounded       4px
        code
          margin        14px 20px 0 40px
          display       block
          font-size     14px
          padding       3px 6px
          color         #28fe14
          background    #444
          font-weight   400
          border        1px solid #eee
          word-break    break-all
          rounded       2px

  &.apps
    bg                  image, url("../images/book/18.png")
    bg                  position, right bottom

  &.etiquette
    bg                  image, url("../images/book/19.png")
    bg                  position, right 90%
    >article
      font-size         13px
    p
      padding-right     0
      &:last-child
        abs()
        top             0
        right           0
        padding         15px 20px 0 20px

  &.enjoy
    bg                  image, url("../images/book/08.png")
    bg                  position, center 74px
    >article
      overflow          visible
      p
        padding         300px 0 0
        text-align      center
        width           100%
      span
        abs()
        top             -35px
        right           20px
        font-weight     300
        font-size       12px
        line-height     16px
        color           #aaa
        a
          color         linkColor1

  >article
    size                auto, auto
    font-size           14px
    line-height         30px
    >p
      padding           15px 20px 0 43px
      line-height       26px
      width             50%
      borderBox()

  >header
    color               #37342f
    padding-top         13px
    size                auto, 60px
    line-height         60px
    font-size           32px
    border-bottom       1px solid rgba(0,0,0,.08)
    padding-left        43px

